@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: September 12, 2008</p>
+      <p>Last Updated: September 17, 2008</p>
     </td>
   </tr>
 </table>
@@ -609,7 +609,7 @@
     </p>
     <p>
       <b>STATUS:</b>
-        Initial coding of this port code complete but has not yet been verified.
+        A basic port that boots and supports a serial console is in place.
     </p>
   </td>
 </tr>
@@ -1108,6 +1108,9 @@ nuttx-0.3.15 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Add mmap() API with restricted capability (only for XIP support)
 	* Extend ROMFS test at /examples/romfs to verify mmap() and XIP support.
 	* Add support for Intel Hex format output using objcopy
+	* Complete the basic port of the NXP LPC2148 on the mcu123.com board.
+	  The basic port includes successful booting, serial console and succesfully
+	  passing the examples/ostest.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
