@@ -19,7 +19,7 @@ NuttX TODO List (Last updated July 31, 2008)
   (1)  ARM (arch/arm/)
   (1)  ARM/C5471 (arch/arm/src/c5471/)
   (1)  ARM/DM320 (arch/arm/src/dm320/)
-  (2)  ARM/LPC214x (arch/arm/src/lpc214x/)
+  (1)  ARM/LPC214x (arch/arm/src/lpc214x/)
   (4)  pjrc-8052 / MCS51 (arch/pjrc-8051/)
   (7)  z80/z8 (arch/z80/)
   (8)  z16 (arch/z16/)
@@ -348,10 +348,6 @@ o ARM/DM320 (arch/arm/src/dm320/)
 
 o ARM/LPC214x (arch/arm/src/lpc214x/)
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-
-  Description: Finish bringup
-  Status:      Open
-  Priority:    High
 
   Description: Add MMC and USB support
   Status:      Open
