@@ -57,7 +57,7 @@ CONFIG_ARCH_CHIP=lpc214x
 CONFIG_ARCH_LPC2148=y
 CONFIG_ARCH_BOARD=mcu123-lpc214x
 CONFIG_ARCH_BOARD_MCU123=y
-CONFIG_BOARD_LOOPSPERMSEC=2778
+CONFIG_BOARD_LOOPSPERMSEC=4327
 CONFIG_ARCH_LEDS=y
 CONFIG_DRAM_SIZE=0x00008000
 CONFIG_DRAM_START=0x40000000
@@ -117,10 +117,14 @@ CONFIG_UART1_2STOP=0
 # CONFIG_INTELHEX_BINARY - make the Intel HEX binary format
 #   used with many different loaders using the GNU objcopy program
 #   Should not be selected if you are not using the GNU toolchain.
+# CONFIG_RAW_BINARY - make a raw binary format file used with many
+#   different loaders using the GNU objcopy program.  This option
+#   should not be selected if you are not using the GNU toolchain.
 # CONFIG_HAVE_LIBM - toolchain supports libm.a
 #
 CONFIG_RRLOAD_BINARY=n
-CONFIG_INTELHEX_BINARY=y
+CONFIG_INTELHEX_BINARY=n
+CONFIG_RAW_BINARY=y
 CONFIG_HAVE_LIBM=n
 
 #
@@ -254,19 +258,19 @@ CONFIG_ARCH_KFREE=n
 #   timer structures to minimize dynamic allocations.  Set to
 #   zero for all dynamic allocations.
 #
-CONFIG_MAX_TASKS=64
+CONFIG_MAX_TASKS=16
 CONFIG_MAX_TASK_ARGS=4
 CONFIG_NPTHREAD_KEYS=4
-CONFIG_NFILE_DESCRIPTORS=32
-CONFIG_NFILE_STREAMS=16
+CONFIG_NFILE_DESCRIPTORS=8
+CONFIG_NFILE_STREAMS=8
 CONFIG_NAME_MAX=32
-CONFIG_STDIO_BUFFER_SIZE=1024
+CONFIG_STDIO_BUFFER_SIZE=512
 CONFIG_NUNGET_CHARS=2
-CONFIG_PREALLOC_MQ_MSGS=32
+CONFIG_PREALLOC_MQ_MSGS=8
 CONFIG_MQ_MAXMSGSIZE=32
 CONFIG_MAX_WDOGPARMS=4
-CONFIG_PREALLOC_WDOGS=32
-CONFIG_PREALLOC_TIMERS=8
+CONFIG_PREALLOC_WDOGS=8
+CONFIG_PREALLOC_TIMERS=4
 
 #
 # TCP/IP and UDP support via uIP
@@ -326,7 +330,7 @@ CONFIG_EXAMPLES_NSH_CONSOLE=y
 CONFIG_EXAMPLES_NSH_TELNET=n
 CONFIG_EXAMPLES_NSH_IOBUFFER_SIZE=512
 CONFIG_EXAMPLES_NSH_CMD_SIZE=40
-CONFIG_EXAMPLES_NSH_STACKSIZE=4096
+CONFIG_EXAMPLES_NSH_STACKSIZE=1024
 CONFIG_EXAMPLES_NSH_DHCPC=n
 CONFIG_EXAMPLES_NSH_NOMAC=n
 CONFIG_EXAMPLES_NSH_IPADDR=(10<<24|0<<16|0<<8|2)
@@ -350,8 +354,8 @@ CONFIG_EXAMPLES_NSH_NETMASK=(255<<24|255<<16|255<<8|0)
 CONFIG_BOOT_FROM_FLASH=y
 CONFIG_CUSTOM_STACK=n
 CONFIG_STACK_POINTER=
-CONFIG_PROC_STACK_SIZE=4096
+CONFIG_PROC_STACK_SIZE=1024
 CONFIG_PTHREAD_STACK_MIN=256
-CONFIG_PTHREAD_STACK_DEFAULT=4096
+CONFIG_PTHREAD_STACK_DEFAULT=1024
 CONFIG_HEAP_BASE=
 CONFIG_HEAP_SIZE=
